--- a/src/view/decision.ui
+++ b/src/view/decision.ui
@@ -42,9 +42,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>150</x>
      <y>40</y>
-     <width>221</width>
+     <width>341</width>
      <height>91</height>
     </rect>
    </property>
@@ -54,7 +54,7 @@
     </font>
    </property>
    <property name="text">
-    <string>NewGame</string>
+    <string>Decision Time</string>
    </property>
   </widget>
  </widget>
