--- a/pyqt/splash.ui
+++ b/pyqt/splash.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>SplashForm</class>
+ <widget class="QWidget" name="SplashForm">
   <property name="geometry">
    <rect>
     <x>0</x>
