--- a/src/view/combat.ui
+++ b/src/view/combat.ui
@@ -26,6 +26,32 @@
     <string>Combat!</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="button1">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>340</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Win</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button2">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>390</y>
+     <width>113</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Win</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
