--- a/src/view/combat.ui
+++ b/src/view/combat.ui
@@ -6,50 +6,48 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>480</height>
+    <width>1280</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>200</y>
-     <width>60</width>
-     <height>16</height>
+     <x>-1</x>
+     <y>490</y>
+     <width>1281</width>
+     <height>311</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="hand_container"/>
+  </widget>
+  <widget class="QLabel" name="player_life">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>120</y>
+     <width>91</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Combat!</string>
+    <string>Player Life</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="button1">
+  <widget class="QLabel" name="enemy_life">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>340</y>
-     <width>113</width>
-     <height>32</height>
+     <x>690</x>
+     <y>120</y>
+     <width>91</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Win</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button2">
-   <property name="geometry">
-    <rect>
-     <x>270</x>
-     <y>390</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Win</string>
+    <string>Enemy Life</string>
    </property>
   </widget>
  </widget>
