--- a/src/view/splash.ui
+++ b/src/view/splash.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
-    <height>800</height>
+    <width>680</width>
+    <height>475</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,14 +31,21 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Load Game</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="settings_button">
       <property name="text">
        <string>Settings</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="quit_button">
       <property name="text">
        <string>Quit</string>
       </property>
